--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,6 @@ auto_encoder/fig
 similarity_graphic/backup
 similarity_semantic/backup
 Supprimerait model/parameters/
+Niraj/
+data/user_and_question_tables2.sql
+
