--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,5 @@ Supprimerait model/parameters/
 Niraj/
 data/user_and_question_tables2.sql
 
+Supprimerait task/migrations/0001_initial.py
+Supprimerait task/migrations/__init__.py
