--- a/.gitignore
+++ b/.gitignore
@@ -138,7 +138,7 @@ bkp/model_evaluation/*
 
 # Related to use data
 data/user_and_question_tables2.sql
-data/duolinguo.sql
+data/duolingo.sql
 data/duolingo.csv
 
 task/migrations/*
