--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,5 @@ data/duolingo_user/
 % Related to django
 task/migrations/*
 duolingo/migrations/*
+bkp/learning_material/connect_graphic_norm_False_150_ddc1e03d-8541-3b33-89d9-d8ecf7abe250.p
+bkp/learning_material/connect_semantic_norm_False_150_3f4a3364-c942-339d-974a-d12af19e879c.p
