--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,8 @@ bkp/learning_material/connect_graphic_norm_False_150_ddc1e03d-8541-3b33-89d9-d8e
 bkp/learning_material/connect_semantic_norm_False_150_3f4a3364-c942-339d-974a-d12af19e879c.p
 bkp/full_stack/
 
+learner/trials/bkp/
+
 # Related to use data
 data/user_and_question_tables2.sql
 data/duolingo.sql
