--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,21 @@
 {
     "param": [0.02, 0.44],
     "param_labels": ["alpha", "beta"],
+    "is_item_specific": false,
     "n_item": 500,
-    "n_iter_per_ss": 100,
-    "n_iter_between_ss": "day",
-    "n_ss": 4,
+    "ss_n_iter": 1000,
+    "ss_n_iter_between": 0,
+    "n_ss": 1,
     "thr": 0.9,
-    "mcts": {"iter_limit": 500, "horizon": 100, "fixed_window":  true,
-             "rollout":  "threshold"},
+    "mcts": {"iter_limit": 500, "time_limit": null,
+        "horizon": 10, "fixed_window":  true,
+        "rollout":  "threshold"},
     "bounds": [[0.001, 0.04], [0.2, 0.5]],
-    "teachers": ["leitner", "threshold", "mcts", "mcts-psy", "threshold-psy"],
+    "teachers": ["leitner", "threshold", "mcts"],
+    "omniscient": [false, false, false],
+    "time_per_iter": 2,
+    "grid_size": 20,
+    "delay_factor": 2,
+    "delay_min": 2,
     "seed": 0
 }
