--- a/config/config.json
+++ b/config/config.json
@@ -1,25 +1,24 @@
 {
-    "param": [0.177, -0.704, 0.0786],
-    "param_labels": ["d", "tau", "temp"],
+    "param": [-0.704, 0.0786,  0.279, 0.177],
+    "param_labels": ["tau", "s", "c", "a"],
     "is_item_specific": false,
-    "n_item": 500,
-    "ss_n_iter": 1000,
-    "ss_n_iter_between": 0,
-    "n_ss": 1,
+    "n_item": 200,
+    "ss_n_iter": 400,
+    "ss_n_iter_between": 400,
+    "n_ss": 2,
     "thr": 0.9,
     "mcts": {
         "iter_limit": 500, "time_limit": null,
-        "horizon": 20, "fixed_window":  true,
-        "rollout":  "threshold"},
+        "horizon": 10},
     "leitner": {
         "delay_factor": 2,
-        "delay_min": 2
+        "delay_min": 4
     },
-    "bounds": [[0.001, 1.00], [-1.00, 1.00], [0.0, 1.0]],
-    "learner_model": "power_law",
-    "teachers": ["leitner", "mcts", "mcts", "threshold", "threshold"],
-    "omniscient": [true, true, false, true, false],
-    "time_per_iter": 2,
+    "bounds": [[-1.00, 1.00], [0.0, 1.00], [0.0, 1.00],[0.0, 1.0]],
+    "learner_model": "act_r",
+    "teachers": ["leitner", "threshold"],
+    "omniscient": [true, true],
+    "time_per_iter": 4,
     "grid_size": 20,
     "seed": 0
 }
