--- a/config/config.json
+++ b/config/config.json
@@ -5,17 +5,17 @@
     "n_item": 200,
     "ss_n_iter": 400,
     "ss_n_iter_between": 400,
-    "n_ss": 2,
+    "n_ss": 4,
     "thr": 0.9,
     "mcts": {
         "iter_limit": 500, "time_limit": null,
-        "horizon": 10},
+        "horizon": 5},
     "leitner": {
         "delay_factor": 2,
         "delay_min": 4
     },
     "bounds": [[-1.00, 1.00], [0.0, 1.00], [0.0, 1.00],[0.0, 1.0]],
-    "learner_model": "act_r",
+    "learner_model": "act_r2008",
     "teachers": ["leitner", "threshold"],
     "omniscient": [true, true],
     "time_per_iter": 4,
