--- a/config/config.json
+++ b/config/config.json
@@ -3,22 +3,22 @@
     "param_labels": ["tau", "s", "c", "a"],
     "is_item_specific": false,
     "n_item": 200,
-    "ss_n_iter": 400,
+    "ss_n_iter": 200,
     "ss_n_iter_between": 400,
     "n_ss": 4,
     "thr": 0.9,
     "mcts": {
         "iter_limit": 500, "time_limit": null,
-        "horizon": 5},
+        "horizon": 10},
     "leitner": {
         "delay_factor": 2,
-        "delay_min": 4
+        "delay_min": 2
     },
     "bounds": [[-1.00, 1.00], [0.0, 1.00], [0.0, 1.00],[0.0, 1.0]],
     "learner_model": "act_r2008",
-    "teachers": ["leitner", "threshold"],
-    "omniscient": [true, true],
-    "time_per_iter": 4,
+    "teachers": ["leitner", "threshold", "mcts"],
+    "omniscient": [true, true, true],
+    "time_per_iter": 2,
     "grid_size": 20,
     "seed": 0
 }
