--- a/config/config.json
+++ b/config/config.json
@@ -16,8 +16,8 @@
     },
     "bounds": [[-1.00, 1.00], [0.0, 1.00], [0.0, 1.00],[0.0, 1.0]],
     "learner_model": "act_r2008",
-    "teachers": ["leitner", "threshold", "mcts"],
-    "omniscient": [true, true, true],
+    "teachers": ["leitner", "threshold"],
+    "omniscient": [true, true],
     "time_per_iter": 2,
     "grid_size": 20,
     "seed": 0
