--- a/config/config_act_r2param.json
+++ b/config/config_act_r2param.json
@@ -1,6 +1,6 @@
 {
-    "param": [-0.704, 0.0786,  0.279, 0.177],
-    "param_labels": ["tau", "s", "c", "a"],
+    "param": [0.279, 0.177],
+    "param_labels": ["c", "a"],
     "is_item_specific": false,
     "n_item": 500,
     "ss_n_iter": 1000,
@@ -14,13 +14,13 @@
         "delay_factor": 2,
         "delay_min": 2
     },
-    "bounds": [[-1.00, 0.0], [0.05, 0.1], [0.1, 0.5],[0.1, 0.5]],
-    "init_guess": null,
-    "learner_model": "act_r2008",
+    "bounds": [[0.0, 1.0], [0.0, 1.00]],
+    "init_guess": [0.25, 0.5],
+    "learner_model": "act_r2param",
     "psychologist_model": "psy_gradient",
     "teachers": ["threshold","leitner", "threshold"],
     "omniscient": [false, true, true],
     "time_per_iter": 2,
-    "grid_size": 4,
+    "grid_size": 20,
     "seed": 0
 }
