--- a/config/config_exp_decay_grid.json
+++ b/config/config_exp_decay_grid.json
@@ -1,6 +1,6 @@
 {
-    "param": [-0.704, 0.0786,  0.279, 0.177],
-    "param_labels": ["tau", "s", "c", "a"],
+    "param": [0.02, 0.44],
+    "param_labels": ["alpha", "beta"],
     "is_item_specific": false,
     "n_item": 500,
     "ss_n_iter": 1000,
@@ -8,19 +8,20 @@
     "n_ss": 1,
     "thr": 0.9,
     "mcts": {
-        "iter_limit": 500, "time_limit": null,
+        "iter_limit": 500,
+        "time_limit": null,
         "horizon": 100},
     "leitner": {
         "delay_factor": 2,
         "delay_min": 2
     },
-    "bounds": [[-1.00, 0.0], [0.05, 0.1], [0.1, 0.5],[0.1, 0.5]],
-    "init_guess": null,
-    "learner_model": "act_r2008",
-    "psychologist_model": "psy_gradient",
+    "bounds": [[0.001, 0.04], [0.2, 0.5]],
+    "init_guess": [0.01, 0.3],
+    "learner_model": "exp_decay",
+    "psychologist_model": "psy_grid",
     "teachers": ["threshold","leitner", "threshold"],
     "omniscient": [false, true, true],
     "time_per_iter": 2,
-    "grid_size": 4,
+    "grid_size": 20,
     "seed": 0
 }
