--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
     "param": [
         0.9,
         0.04,
-        0.02,
+        0.01,
         0.08,
         0.1,
         0.6],
@@ -21,18 +21,18 @@
         "delay_min": 2
     },
     "bounds": [
-        [0.9, 0.9],
-        [0.04, 0.04],
-        [0.02, 0.02],
-        [0.08, 0.08],
+        [0.8, 1.2],
+        [0.03, 0.05],
+        [0.005, 0.20],
+        [0.005, 0.20],
         [0.1, 0.1],
         [0.6, 0.6]],
     "init_guess": null,
     "learner_model": "walsh2018",
     "psychologist_model": "psy_grid",
-    "teachers": ["threshold"],
-    "omniscient": [false],
+    "teachers": ["leitner","threshold", "threshold", "mcts", "mcts"],
+    "omniscient": [false, false, true, false, true],
     "time_per_iter": 2,
-    "grid_size": 3,
+    "grid_size": 10,
     "seed": 0
 }
