--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,7 @@
     "thr": 0.9,
     "mcts": {
         "iter_limit": 500, "time_limit": null,
-        "horizon": 100},
+        "horizon": 50},
     "leitner": {
         "delay_factor": 2,
         "delay_min": 2
@@ -30,8 +30,8 @@
     "init_guess": null,
     "learner_model": "walsh2018",
     "psychologist_model": "psy_grid",
-    "teachers": ["leitner","threshold", "threshold", "mcts", "mcts"],
-    "omniscient": [false, false, true, false, true],
+    "teachers": ["leitner", "threshold","mcts", "threshold","mcts"],
+    "omniscient": [false, true, true, false, false],
     "time_per_iter": 2,
     "grid_size": 10,
     "seed": 0
