--- a/config/config.json
+++ b/config/config.json
@@ -9,9 +9,9 @@
     "param_labels": ["tau", "s", "b", "m", "c", "x"],
     "is_item_specific": false,
     "n_item": 500,
-    "ss_n_iter": 1000,
-    "ss_n_iter_between": 0,
-    "n_ss": 1,
+    "ss_n_iter": 50,
+    "ss_n_iter_between": 500,
+    "n_ss": 10,
     "thr": 0.9,
     "mcts": {
         "iter_limit": 500, "time_limit": null,
@@ -30,8 +30,8 @@
     "init_guess": null,
     "learner_model": "walsh2018",
     "psychologist_model": "psy_grid",
-    "teachers": ["leitner", "threshold","sampling", "threshold", "sampling"],
-    "omniscient": [false, true, true, false, false],
+    "teachers": ["leitner", "threshold","sampling"],
+    "omniscient": [false, true, true],
     "time_per_iter": 2,
     "grid_size": 10,
     "seed": 0
