--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,7 @@
     "param_labels": ["tau", "s", "b", "m", "c", "x"],
     "is_item_specific": false,
     "n_item": 500,
-    "ss_n_iter": 50,
+    "ss_n_iter": 2,
     "ss_n_iter_between": 500,
     "n_ss": 2,
     "thr": 0.9,
@@ -30,8 +30,8 @@
     "init_guess": null,
     "learner_model": "walsh2018",
     "psychologist_model": "psy_grid",
-    "teachers": ["leitner", "threshold","sampling"],
-    "omniscient": [false, false, false],
+    "teachers": ["threshold"],
+    "omniscient": [false],
     "time_per_iter": 2,
     "grid_size": 10,
     "seed": 0
