--- a/config/config_triton_trial.json
+++ b/config/config_triton_trial.json
@@ -9,8 +9,8 @@
   "n_item": 100,
   "task_pr_lab": ["learnt_threshold", "is_item_specific","time_per_iter","n_ss","ss_n_iter", "time_between_ss"],
   "task_pr_val": [0.90, false, 2, 2, 100, 1000],
-  "teacher_pr_lab": ["horizon", "n_sample"],
-  "teacher_pr_val": [100, 500],
+  "teacher_pr_lab": ["n_sample"],
+  "teacher_pr_val": [500],
   "psy_pr_lab": ["grid_size"],
   "psy_pr_val": [20],
   "pr_lab": ["alpha", "beta"],
